--- a/Rubiks/RubiksCubeSolver/CMakeLists.txt
+++ b/Rubiks/RubiksCubeSolver/CMakeLists.txt
@@ -4,5 +4,6 @@ project(RubiksCubeSolver)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(RubiksCubeSolver main.cpp
-        GenericRubiksCube.cpp
-        GenericRubiksCube.h)
+        GenericRubikCube.cpp
+        GenericRubikCube.h
+)
