--- a/Rubiks/RubiksCubeSolver/CMakeLists.txt
+++ b/Rubiks/RubiksCubeSolver/CMakeLists.txt
@@ -4,6 +4,6 @@ project(RubiksCubeSolver)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(RubiksCubeSolver main.cpp
-        GenericRubikCube.cpp
-        GenericRubikCube.h
+        RubiksCube.cpp
+        RubiksCube.h
 )
