--- a/Rubiks/RubiksCubeSolver/CMakeLists.txt
+++ b/Rubiks/RubiksCubeSolver/CMakeLists.txt
@@ -6,4 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(RubiksCubeSolver main.cpp
         RubiksCube.cpp
         RubiksCube.h
+        RubiksCube3dArray.cpp
+        RubiksCube1dArray.cpp
+        RubiksCubeBitboard.cpp
 )
